# game-matcher-qt

./: .gitignore  .gitmodules  CMakeLists.txt  LINCENSE.txt  README.md
.github/workflows/: cmake.yml
res/db/: db_v1.sql  db_v2.sql  db_v3.sql  db_v4.sql  db_v5.sql  queries.moor  queries.qrc
res/fonts/: fonts.qrc
res/icons/: icons.qrc
res/images/: images.qrc
res/qml/: ClubPage.qml  ClubPageForm.ui.qml  NewClubPage.qml  NewClubPageForm.ui.qml  WelcomePage.qml  WelcomePageForm.ui.qml  main.qml  qml.qrc  qtquickcontrols2.conf
res/sound/: sound.qrc
res/ui/: MainWindow.ui
src/: Adapter.h  BFCombinationFinder.cpp  BFCombinationFinder.h  BaseReport.h  BruteForceCombinationFinder.cpp  BruteForceCombinationFinder.h  CheckInDialog.cpp  CheckInDialog.h  CheckInDialog.ui  ClubHomePage.cpp  ClubHomePage.h  ClubHomePage.ui  ClubPage.cpp  ClubPage.h  ClubPage.ui  ClubRepository.cpp  ClubRepository.h  ClubRepositoryInternal.h  ClubRepositoryModels.h  ClubWindow.cpp  ClubWindow.h  ClubWindow.ui  CollectionUtils.h  CombinationFinder.cpp  CombinationFinder.h  CombinationsFinder.h  CourtCombinationFinder.cpp  CourtCombinationFinder.h  CourtDisplay.cpp  CourtDisplay.h  CourtDisplay.ui  CourtDisplayLayout.cpp  CourtDisplayLayout.h  CourtFinderV1.cpp  CourtFinderV1.h  CourtItemDelegate.cpp  CourtItemDelegate.h  DbUtils.cpp  DbUtils.h  EditMemberDialog.cpp  (+107 more)
src/test/: BFCombinationFinderTest.cpp  CheckInDialogTest.cpp  ClubPageTest.cpp  ClubRepositoryTest.cpp  ClubRepositoryTest.h  CourtDisplayTest.cpp  EditMemberDialogTest.cpp  EligiblePlayerFinderTest.cpp  EmptySessionPageTest.cpp  GameStatsImplTest.cpp  MainWindowTest.cpp  MockGameStats.h  NewClubRepositoryTest.cpp  SortingLevelCombinationFinderTest.cpp  TestUtils.h  main.cpp
